# ml

./: .gitignore  Dockerfile  Makefile  pyproject.toml
.Trash-0/info/: memo.md.trashinfo
src/ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/titanic/: main.ipynb  memo.ipynb
src/titanic/.ipynb_checkpoints/: main-checkpoint.ipynb
src/util/.ipynb_checkpoints/: reader-checkpoint.py
